--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
-
+<h2 hidden>Game Over</h2>
+<h2 hidden>Refresh to Play Again 🧑‍💻 🤖!</h2>
 <script>
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
